# e-learning

./: .env.example  .pre-commit-config.yaml  Dockerfile  db.sqlite3  manage.py  pyproject.toml  pytest.ini
courses/: models.py
courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py
courses/tests/: unit_tests.py
educa/: asgi.py  settings.py  urls.py  wsgi.py
