[project]
name = "e-learn-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
